# cli

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TRADEMARK.md  install.ps1  install.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  cla.yml  release.yml
docs/: single-manifest-hosting.md
docs/adr/: 0001-remote-mcp-hosting.md
fixtures/: data.json  sample.md
fixtures/openapi/: petstore.yaml
src/: cli.rs  config.rs  context.rs  error.rs  main.rs  update.rs
src/commands/: connect.rs  generate.rs  init.rs  ls.rs  mcp.rs  mod.rs  read.rs  remove.rs  status.rs  update.rs
src/mcp/: db_introspector.rs  db_tool_planner.rs  executor.rs  manifest.rs  mod.rs  openapi.rs  runtime.rs  schema.rs  service.rs  sql_executor.rs  tool_mapper.rs
src/mcp/db_introspector/: postgres.rs  sqlite.rs
src/mcp/http/: mod.rs  wire.rs
src/provider/: filesystem.rs  mod.rs  postgres.rs  sqlite.rs
tests/: cli_test.rs  filesystem_test.rs  mcp_db_test.rs  mcp_generate_test.rs  mcp_http_test.rs  mcp_runtime_test.rs  mcp_sqlite_test.rs  mcp_unit_test.rs  postgres_test.rs  sqlite_test.rs
v1/: cla.json
