[package]
name = "bridge-cli"
version = "1.0.3"
edition = "2021"
rust-version = "1.94.1"
description = "Any storage. Any agent. One CLI"
license = "AGPL-3.0-only"
repository = "https://github.com/usebridgeai/cli"
homepage = "https://bridge.ls"
authors = ["Gabriel Beslic", "Tomer Li Ran"]
keywords = ["ai", "agents", "cli", "context", "storage"]
categories = ["command-line-utilities", "database"]
publish = false
readme = "README.md"

[[bin]]
name = "bridge"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
async-trait = "0.1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "sqlite"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
regex = "1"
clap_complete = "4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
openapiv3 = "2"
indexmap = { version = "2", features = ["serde"] }
url = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
